--- a/myfind-cje/Makefile
+++ b/myfind-cje/Makefile
@@ -1,19 +1,24 @@
-OPTFLAGS        = -O3 -Wall -Werror -Wextra -pedantic -g
+OPTFLAGS        = -O3 -Wall -Werror -Wextra -Wstrict-prototypes -fno-common -pedantic -g
 CC              = gcc
 MAKE            = make
 RM              = rm -f
 DOXYGEN         = doxygen
+CD              = cd
+MV              = mv
+GREP            = grep
+EXCLUDE_PATTERN = footrulewidth
+OBJECTS          = datei.o
 
 %.o : %.c
 	$(CC) $(OPTFLAGS) -o $@ -c $<
 
 all: datei
 
-myfind: datei.o
-	$(CC) $(OPTFLAGS) datei.o -o myfind
+myfind: $(OBJECTS)
+	$(CC) $(OPTFLAGS) -o $@ $^
 
 clean:
-	$(RM) *.o *.h.gch myfind 
+	$(RM) *.o *.h.gch datei
 
 clean_doc:
 	$(RM) -r doc/ html/ latex/
@@ -26,13 +31,14 @@ clean_all: clean clean_doc
 doc: html pfd
 
 html: 
-  $(DOXYGEN) doxygencgf
+  $(DOXYGEN) doxygen.dcf
 
 pdf: html 
   $(CD) doc/pdf && \ 
    $(MV) refman.tex refman_save.tex && \ 
    $(GREP) -v $(EXCLUDE_PATTERN) refman_save-tex > refman.tex && \
    $(RM) refman_save.tex && \ 
-   make && \ $(MV) refman.pdf refman.save && \ 
+   make && \ 
+   $(MV) refman.pdf refman.save && \ 
    $(RM) *.pdf *.html *.tex *.aux *.sty *.log *.eps *.out *.ind *.idx \ *.ilg *.toc *.tps makefile && \ 
    $(MV) refman.save refman.pdf
